# js-runtime

./: .gitignore  Cargo.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  readme.md  tsconfig.json
benchmarks/: Cargo.toml  README.md
benchmarks/benches/: comparison.rs
benchmarks/inputs/comparison/: quickjs.jsx  quickjs_footer.jsx
examples/axum-jsx/: Cargo.toml
examples/axum-jsx/src/: main.rs
examples/axum-jsx/src-js/components/: item.jsx
examples/axum-jsx/src-js/pages/: index.js  items.jsx  items.tsx  root.jsx
examples/axum-jsx/src/pages/: items.jsx
examples/axum-shared-jsx/: Cargo.toml  index.html  package.json  tsconfig.app.json  vite.config.ts
examples/axum-shared-jsx/src/: main.rs
examples/axum-shared-jsx/src-js/: app.tsx
examples/axum-shared-jsx/src-js/components/: item.tsx
examples/axum-shared-jsx/src-js/pages/: root.tsx
examples/axum-shared-jsx/src-web/: app.tsx  index.html
examples/axum-shared-jsx/src-web/components/: server-layout.tsx
examples/axum-shared-jsx/src-web/pages/: about.tsx  home.tsx  items.tsx  root.tsx
examples/axum-shared-jsx/src-web/pages/server/: items.page.tsx  root.tsx
examples/axum-simple-jsx/: Cargo.toml  tsconfig.json
examples/axum-simple-jsx/src/: main.rs
js/: Cargo.toml
js/src/: context.rs  js.rs  lib.rs  runtime.rs
js/src/js/: jsx.js
