[package]
name = "js"
version = "0.1.0"
edition = "2024"

[features]
default = []
ts = ["deno_ast"]

[dependencies]
thiserror = "2.0.12"

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

log = "0.4"

tokio = { version = "1.44.2", features = ["full"] }
crossbeam = "0.8.4"

quickjs-rusty = { version = "0.8.0", features = ['serde', 'chrono'] }
deno_ast = { version = "0.46.6", features = ["transpiling"], optional = true }

[lints]
workspace = true

[dev-dependencies]
env_logger = "0.11.8"
