[package]
name = "js"
version = "0.1.0"
edition = "2024"

[features]
default = ["transpiling", "with-axum"]
transpiling = ["deno_ast"]
with-axum = ["axum"]

[dependencies]
thiserror = "2.0.12"
anyhow = "1.0.98"

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

log = "0.4"

tokio = { version = "1.44.2", features = ["full"] }
crossbeam = "0.8.4"

quickjs-rusty = { version = "0.8.0", features = ['serde', 'chrono'] }
deno_ast = { version = "0.46.6", features = ["transpiling"], optional = true }

axum = { version = "0.8.4", optional = true, default-features = false }
include_dir = "0.7.4"

[lints]
workspace = true

[dev-dependencies]
env_logger = "0.11.8"
