[package]
name = "axum-shared-jsx"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
thiserror = "2.0.12"

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }

tokio = { version = "1.44.2", features = ["full"] }

axum = { version = "0.8.3", features = ['macros'] }
axum-macros = "0.5.0"

include_dir = "0.7.4"

js = { path = "../../js" }
mime_guess = "2.0.5"

[lints]
workspace = true
